--- a/src/components/Card/styled.scss
+++ b/src/components/Card/styled.scss
@@ -1,16 +1,26 @@
+@import '../../variables.scss';
+
 .card {
   display: flex;
-  flex-direction: column;
-  border-radius: 5px;
- 
-  
-  a{
+  flex-direction: column; 
+  position: relative;
+
+  &:hover {
+    img {
+      height: 200px; 
+    }
+    .info {
+      background-position: 0 0; 
+    }
+  }
+
+  a {
     height: 194px;
   }
 
   img {
+    border-bottom: 4px solid $red-marvel;
     height: 189.97px;
-    border-bottom: 4px solid #EC1D24;
     border-radius: 5px 5px 0 0; 
     object-fit: cover; 
     width: 100%;
@@ -20,19 +30,32 @@
     padding: 16px 16px 24px 16px;
     display: flex;
     justify-content: space-between;
-    background-color: black;
     height: 56px;
-
+    background: linear-gradient(to bottom, $red-marvel 0%, $red-marvel 50%, black 50%, black 100%); 
+    background-size: 100% 200%;
+    background-position: 0 100%; 
+    transition: background-position 0.3s; 
+    
     .title {
-      width: 108px;
       height: 16px;
-      color: #FFFFFF;
+      color: $white-color;
       font-weight: 400;
       font-size: 14px;
       line-height: 16.41px;
       text-decoration: none; 
     }
-    
+  }
+
+  &::after {
+    border-color: transparent $white-color transparent transparent;
+    border-style: solid;
+    border-width: 12px 12px 0 0;
+    bottom: 0;
+    content: "";
+    position: absolute;
+    right: 0;
+    top: auto;
+    z-index: 40;
   }
 }
 
