--- a/src/components/CharacterResume/styled.scss
+++ b/src/components/CharacterResume/styled.scss
@@ -1,3 +1,5 @@
+@import '../../variables.scss';
+
 .wrapper {
     background-color: black;
     width: auto;
@@ -5,20 +7,36 @@
     display: flex;
     justify-content: center;
     border-top: 1px solid #333333;
-
+    @media (max-width: $mobile-width) {
+        display: grid;
+    }
     img {
         width: 320px;
         height: 320px;
+        @media (max-width: $mobile-width) {
+            width:100%;
+            height: 100%;
+        }
     }
 
     .info {
         color: white;
         padding: 60px;
         width: 40%;
+        @media (max-width: $mobile-width) {
+            width: auto;
+            padding: 0px 10px 10px 10px;
+        }
     }
 
     .title {
         text-transform: uppercase;
+    }
+
+    .block-title {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
     }
 
     
