--- a/src/views/CharacterList/styled.scss
+++ b/src/views/CharacterList/styled.scss
@@ -1,11 +1,52 @@
 
+@import '../../variables.scss';
 
 
 .cards-container {
-  --auto-grid-min-size: 14rem;
+  --auto-grid-min-size: 13rem;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(var(--auto-grid-min-size), 1fr));
   gap: 20px;
-  padding: 20px;
+  padding: 16px 48px 16px 49px;
+  @media (max-width: $mobile-width) {
+    gap: 10px;
+    padding: 16px 15px 16px 15px;
+    --auto-grid-min-size: 9rem;
+    grid-template-columns: repeat(2, minmax(var(--auto-grid-min-size), 1fr));
+  }
 }
 
+.loader {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 48px;
+  height: 48px;
+  border: 5px solid $white-color;
+  border-bottom-color: $red-marvel;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+  }
+
+  @keyframes rotation {
+  0% {
+      transform: rotate(0deg);
+  }
+  100% {
+      transform: rotate(360deg);
+  }
+  } 
+
+  .wrapper-loader {
+    width: 100%;
+    height: 20px;
+    background-color: white
+  }
+
+  .loader {
+    height: 100%;
+    background-color: $red-marvel;
+    transition: width 0.1s linear;
+  }
