--- a/src/views/ComicsCharacter/styled.scss
+++ b/src/views/ComicsCharacter/styled.scss
@@ -1,29 +1,44 @@
+@import '../../variables.scss';
 
-  
 .container {
   display: flex;
   justify-content: center;
   align-items: center;
-  max-width: 1650px;
+
   .frame {
-    width: 960px;
-    padding: 48px 0px 48px 0px;
-    grid-column: center-start / -1;
-    display: grid;
-    grid-auto-flow: column;
-    gap: 1rem;
+    width: 63%;
+    display: flex;
+    gap: 20px;
     overflow: auto;
-    padding-bottom: 1rem;
-    padding-right: var(--page-margin);
+    @media (max-width: $mobile-width) {
+      width: auto;
+    }
   }
   ::-webkit-scrollbar {
     width: 6px;
     background-color: #F5F5F5;
-}
+  }
 
   ::-webkit-scrollbar-thumb  {
     border-radius: 10px;
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-    background-color: #EC1D24;
+    background-color: $red-marvel;
+  }
 }
+
+.comics {
+  padding: 25px 0px 25px 0px;
+  gap: 15px;
+  display: flex;
+  flex-direction: column;
+  @media (max-width: $mobile-width) {
+    padding: 25px 0px 25px 10px;
+  }
+}
+
+.subtitle{
+  padding-bottom: 15px;
+  text-transform: uppercase;
+  font-size: 17px;
+  font-weight: 500;
 }
