--- a/src/components/Filter/styled.scss
+++ b/src/components/Filter/styled.scss
@@ -7,7 +7,7 @@
     }
     input {
         border: none;
-        border-bottom: 2px solid black;
+        outline: none;
         height: 50px;
         width: 100%;
         padding: 15px 5px 5px 15px;
@@ -23,4 +23,8 @@
         text-transform: uppercase;
     }
 }
-    
+.searcher{
+    display: flex;
+    align-items: center;
+    border-bottom: 2px solid black;
+}    
