--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,11 @@
+
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
 }
 
 body {
   margin: 0;
+  font-family: 'Roboto Condensed', sans-serif;
+
 }
